--- a/cruise-ships-gui/CSS/style.css
+++ b/cruise-ships-gui/CSS/style.css
@@ -56,12 +56,23 @@ body {
   padding-top: 14px;
 }
 
-#message {
-  padding: 16px;
-  font-family: 'Acme', sans-serif;;
+#display {
   position: absolute;
-  width: 100%;
-  bottom: 0;
-  border-top: 3px solid black;
-  background-color: rgb(243, 175, 93);
+  top: 20px;
+  right: 20px;
+  list-style: none;
+  font-family: 'Acme', sans-serif;
+  color: black;
+  font-size: 20px;
+  text-shadow: -0.5px 0 rgb(187, 106, 1), 0 0.5px rgb(187, 106, 1), 0.5px 0 rgb(187, 106, 1), 0 -0.5px rgb(187, 106, 1);
 }
+
+#message {
+  font-family: 'Acme', sans-serif;
+  color: rgb(187, 106, 1);
+  font-size: 25px;
+  text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
+}
+
+
+
