--- a/cruise-ships-gui/CSS/style.css
+++ b/cruise-ships-gui/CSS/style.css
@@ -39,7 +39,7 @@ body {
 #sailbutton {
   border: 0;
   background-color: bisque;
-  border-bottom: 4px solid brown;
+  border: 4px double rgb(59, 19, 6);
   color: black;
   font-family: inherit;
   padding: 10px 20px;
@@ -72,6 +72,44 @@ body {
   color: rgb(187, 106, 1);
   font-size: 25px;
   text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
+}
+
+#div_form_add {
+  background-color: bisque;
+  display: flex;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  flex-direction: column;
+  border-style: double;
+  border-color: rgb(59, 19, 6);
+}
+
+#div_form_add > button {
+  height: 20px;
+  width: 60px;
+  flex-direction: column;
+  margin: 0 20px 10px 20px;
+  font-family: 'Acme', sans-serif;
+}
+
+#div_form_add > button:hover {
+  background-color: rgb(241, 196, 141);
+}
+
+#add_form {
+  margin: 10px 20px 20px 20px;
+  flex-direction: column;
+}
+
+#add_form > label {
+  font-family: 'Acme', sans-serif;
+  font-size: 20px;
+  color: rgb(59, 19, 6);
+}
+
+#add_form > input {
+  margin-top: 10px;
 }
 
 
